--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -7,12 +7,35 @@
     <link href="/stylesheets/style.css" rel="stylesheet" type="text/css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
 
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://kit.fontawesome.com/c07c299c0a.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
+    <nav class="navbar navbar-expand-sm bg-light">
+        <div class="container-fluid">
+            <ul class="navbar-nav">
+                <li class="nav-item"><a class="nav-link text-black" href="/main">Trang chủ</a></li>
+            </ul>
+            <ul class="navbar-nav">
+                <li class="nav-item"><a class="nav-link text-black" href="/main/san-pham">Sản phẩm</a></li>
+            </ul>
+            <ul class="navbar-nav">
+                <li class="nav-item"><a class="nav-link text-black" href="/main/danh-muc">Danh mục</a></li>
+            </ul>
+            <ul class="navbar-nav">
+                <li class="nav-item"><a class="nav-link text-black" href="/main/khac">Others</a></li>
+            </ul>
+            <ul class="navbar-nav">
+                <li class="nav-item"><a class="nav-link text-black" href="/main/users">Người dùng</a></li>
+            </ul>
+            <ul class="navbar-nav">
+                <li class="nav-item"><a href="/main/nguoi-dung"><img src="/images/winter-dog.jpg" width="50"
+                            height="50" class="rounded-circle" alt=""></a></li>
+            </ul>
+        </div>
+    </nav>
     {{{body}}}
 </body>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
-
 </html>
