--- a/views/register.hbs
+++ b/views/register.hbs
@@ -2,11 +2,7 @@
     <div class="d-flex justify-content-center h-100">
         <div class="card">
             <div class="card-header">
-                <h3>Sign In</h3>
-                <div class="d-flex justify-content-end social_icon">
-                    <span><i class="fab fa-facebook-square"></i></span>
-                    <span><i class="fab fa-google-plus-square"></i></span>
-                </div>
+                <h3>Register</h3>
             </div>
             <div class="card-body">
                 <form action="/dang-nhap" method="post" role="form">
@@ -23,20 +19,14 @@
                         </div>
                         <input type="password" class="form-control" placeholder="password" name="password">
                     </div>
-                    <div class="row align-items-center remember">
-                        <input type="checkbox">Remember Me
-                    </div>
-                    <div class="form-froup">
-                        <input type="submit" value="Login" class="btn float-end login_btn">
+                    <div class="form-froup text-center">
+                        <input type="submit" value="Register" class="btn login_btn">
                     </div>
                 </form>
             </div>
             <div class="card-footer">
                 <div class="d-flex justify-content-center links">
-                    Don't have an account?<a href="/dang-ky">Sign Up</a>
-                </div>
-                <div class="d-flex justify-content-center">
-                    <a href="#">Forgot your password?</a>
+                    Already have an account?<a href="/dang-nhap">Login</a>
                 </div>
             </div>
         </div>
